BUG: 105351

Keep file extension after download of the payload.
Don't use version/release info to generate fullName() if it's not set


svn path=/branches/KDE/3.5/kdelibs/; revision=620538